Add shelf scene, parallax background, and reflection effect for books
- Added rexQuad image for proper distortion of reflection
- Raycasting to check when reflection should show
- Code to check where reflection should be

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "phaser": "^3.88.2"
+    "phaser": "^3.88.2",
+    "phaser3-rex-plugins": "^1.80.15"
   },
   "devDependencies": {
     "vite": "^6.2.6"
